<resources>
    <string name="app_name">My Favorites</string>
    <string name="menu_all">Todas as Clinicas</string>
    <string name="menu_favorites">Favoritas</string>
    <string name="search">Pesquisar</string>
    <string name="welcome">Bem vindo!</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="logo">Logo</string>
    <string name="not_found">Nada encontrado. Verifique sua internet.</string>
    <string name="without_favorite">Nenhuma clinica favoritada.</string>
    <string name="favorite">Favoritar</string>
    <string name="descricao">Descrição: </string>
    <string name="beneficios">Benefícios: </string>
    <string name="segmentos">Segmentos: </string>
    <string name="telefone">Telefone: </string>
    <string name="endereco">Endereço: </string>
    <string name="menu_activity">Nova janela</string>
</resources>
