<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_clinica"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_clinica"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/nome_fantasia"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ib_star"
        app:layout_constraintStart_toEndOf="@+id/iv_clinica"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_star"
        android:layout_width="50dp"
        android:layout_height="90dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_empty"
        android:contentDescription="@string/favorite" />

</android.support.constraint.ConstraintLayout>